# test-infra

./: go.mod  go.sum  repos.bzl
prow/cmd/gitee-hook/: BUILD.bazel  plugins.go
prow/gitee/: client.go  interface.go  util.go
prow/gitee-plugins/: dispatcher.go  util.go
prow/gitee-plugins/assign/: BUILD.bazel  assign.go  client.go
prow/gitee-plugins/cla/: cla.go
prow/gitee-plugins/cla-euler/: cla.go
prow/gitee-plugins/hold/: BUILD.bazel  hold.go
prow/gitee-plugins/label/: BUILD.bazel  action.go  clear.go  config.go  label.go  note_handler.go
prow/gitee-plugins/lgtm/: config.go  lgtm.go  notification.go  strict-review.go
prow/gitee-plugins/lifecycle/: close.go  lifecycle.go  reopen.go
prow/gitee-plugins/repohandle/: BUILD.bazel  client.go  config.go  repocache.go  repohandle.go  sigcache.go  util.go
prow/gitee-plugins/review-trigger/: review.go  reviewer-helper.go
prow/gitee-plugins/size/: BUILD.bazel  client.go  config.go  size.go
prow/plugins/assign/: export.go
prow/plugins/size/: BUILD.bazel  export.go
robots/gitee-commenter/: BUILD.bazel  checker.go  commenter.go  issue_checker.go  main.go  pr_checker.go
