package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//prow:def.bzl", "prow_image", "prow_push")

NAME = "gitee-commenter"

go_binary(
    name = NAME,
    embed = [":go_default_library"],
)

prow_image(
    name = "image",
    base = "@alpine-base//image",
    component = NAME,
    visibility = ["//visibility:public"],
)

prow_push(
    name = "push",
    images = {
        "{STABLE_DOCKER_REPO}/commenter:{DOCKER_TAG}": ":image",
        "{STABLE_DOCKER_REPO}/commenter:latest": ":image",
        "{STABLE_DOCKER_REPO}/commenter:latest-{BUILD_USER}": ":image",
    },
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "commenter.go",
        "checker.go",
        "issue_checker.go",
        "pr_checker.go",
        ],
    importpath = "k8s.io/test-infra/robots/gitee-commenter",
    deps = [
        "//pkg/flagutil:go_default_library",
        "//prow/logrusutil:go_default_library",
        "//prow/gitee:go_default_library",
        "//prow/config/secret:go_default_library",
        "//prow/flagutil:go_default_library",
        "//prow/github:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_gitee_openeuler_go-gitee//gitee:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
)


