load("@io_bazel_rules_go//go:def.bzl", "go_library")


go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "config.go",
        "size.go",
    ],
    importpath = "k8s.io/test-infra/prow/gitee-plugins/size",
    visibility = ["//visibility:public"],
    deps = [
        "//prow/config:go_default_library",
        "//prow/gitee-plugins:go_default_library",
        "//prow/gitee:go_default_library",
        "//prow/pluginhelp:go_default_library",
        "//prow/github:go_default_library",
        "//prow/plugins:go_default_library",
        "//prow/plugins/size:go_default_library",
        "@com_github_huaweicloud_golangsdk//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_gitee_openeuler_go-gitee//gitee:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
    ],
)
